@@ -260,6 +260,31 @@ context "Dataset#where" do
   end
 end
 
+context "Dataset#or" do
+  setup do
+    @dataset = Sequel::Dataset.new(nil).from(:test)
+    @d1 = @dataset.where(:x => 1)
+  end
+  
+  specify "should raise if no filter exists" do
+    proc {@dataset.or(:a => 1)}.should raise_error(SequelError)
+  end
+  
+  specify "should add an alternative expression to the where clause" do
+    @d1.or(:y => 2).sql.should == 
+      'SELECT * FROM test WHERE (x = 1) OR (y = 2)'
+  end
+  
+  specify "should accept all forms of filters" do
+    # probably not exhaustive, but good enough
+    @d1.or('(y > ?)', 2).sql.should ==
+      'SELECT * FROM test WHERE (x = 1) OR (y > 2)'
+      
+    (@d1.or {yy > 3}).sql.should ==
+      'SELECT * FROM test WHERE (x = 1) OR (yy > 3)'
+  end
+end
+
 context "Dataset#exclude" do
   setup do
     @dataset = Sequel::Dataset.new(nil).from(:test)
